2008-03-17 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/user_agent.pl: Moved default list of node agents to first start
	  only. Won't update unless this is the first run.
	  
2008-03-14 Eric Saunders <saunders@astro.ex.ac.uk>

        * eSTAR/ADP/Util.pm: Commited update from last summer to use 
        DateTime::Epoch. Fixes 1 month boundary bug.
        
        * bin/adaptive_vs_scheduler.pl: Commited update from last summer which
        implements partial run restarts for the ADP agent.

2008-03-12 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/GSM.pm: A front end for the GSM Service on estar6
	
	* bin/test_servers_gsm.pl: Cron'd status script (run on estar6)

	* startup/cron/test_gsm: Startup script for that script
	
	* www/robonet-1.0/cgi-bin/*: Fixed sorting of files.
	
2008-03-05 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/OGLE Timeline.wdgt/*: Updated to point at estar6
	
2008-02-28 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_sky/event_client.pl: Moved to estar6 and updated
	
	* startup/google: Updated for estar6

	* www/ogle/*: Moved to estar6 and updated
	
	* www/sdss/*: Moved to estar6 and updated
	
	* eSTAR/Broker/Handler.pm: Hack to fixed bad VOEvent document submission

	* bin/ogle_parsemail.pl: Run from .procmailrc when an EWS mail comes in
	  now changed to point at estar6
	  
2008-02-27 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/robonet-1.0/*: Modified for move form estar3 to estar5
	
	* etc/user_agent.csh & startup/exo_planets: Modified for move to estar5
	
2008-02-26 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/gsm_gateway.pl: A HTTP frontend for the GSM hardware.
        
        * eSTAR/UA/Handler.pm & bin/make_observation.pl: Added priority support
          to the system, e.g.
          
          bin/make_observation.pl -exposure 30 -passband R -user X -pass Y -project Z -target "Test Target" -ra "08 13 42.00" -dec "-05 04 27.00" -starttime "2008-02-26T20:00:00+0000" -endtime "2008-02-27T04:00:00+0000" -priority 1
