@@ -1,7 +1,11 @@
-2008-03-17 Eric Saunders <saunders@astro.ex.ac.uk>
+
+2008-03-17 Alasdair Allan <aa@astro.ex.ac.uk>
 
 	* bin/user_agent.pl: Moved default list of node agents to first start
 	  only. Won't update unless this is the first run.
+	  
+	* bin/soap_client.pl: Hacked about to talk to Java NodeAgent. Needs
+	  rewriting from scratch at some point.  
 	  
 2008-03-14 Eric Saunders <saunders@astro.ex.ac.uk>
 
